--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ header .container div {
 }
 .container .header__h1 h1 {
     color: white;
-    font: 2.5em roboto, sans-serif;
+    font: 40px roboto, sans-serif;
 }
 .container .header__h1 span {
     color: red;
@@ -139,14 +139,14 @@ header .container div {
     color: #f1f1f1;
 }
 .container .header__p p {
-    font: 0.9em poppins, sans-serif;
+    font: 13px poppins, sans-serif;
 }
 .container .btn a {
     display: block;
     width: 90px;
     text-align: center;
     text-decoration: none;
-    font: 0.9em poppins, sans-serif;
+    font: 13px poppins, sans-serif;
     color: #f1f1f1;
     border: 2px solid #8B1A1A;
     padding: 5px;
@@ -194,7 +194,13 @@ header .container div {
     }
     .container .header__h1 h1 {
         color: white;
-        font: 3.12em roboto, sans-serif;
+        font-size: 50px;
+    }
+    .container .header__p p {
+        font-size: 15px;
+    }
+    .container .btn a {
+        font-size: 15px;
     }
 }
 
