--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@
     padding: 0px;
     box-sizing: border-box;
 }
-body {
-    overflow-x: hidden;
+h1 {
+    color: white;
+    font: 40px roboto, sans-serif;
 }
 
 /* nav */
@@ -102,7 +103,7 @@ nav .menu-toggle .menu__burger {
 /* akhir nav */
 
 
-/* konten */
+/* section */
 /* header */
 header {
     background-image: url(gambargazebo.jpg);
@@ -125,10 +126,6 @@ header .container {
 }
 header .container div {
     margin: 10px;
-}
-.container .header__h1 h1 {
-    color: white;
-    font: 40px roboto, sans-serif;
 }
 .container .header__h1 span {
     color: red;
@@ -155,7 +152,53 @@ header .container div {
     text-decoration: underline;
 }
 /* akhir header */
+
+/* konten */
+section {
+    background-color: #8B1A1A;
+    height: 5700px;
+    padding: 50px 0px 0px 0px;
+}
+section .lapisan__section {
+    background-color: #222;
+    height: 5515px;
+}
+section h1{
+    font-size: 30px;
+}
+section .main1 h1 {
+    grid-area: judul;
+}
+section .main1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 0.5fr 1fr;
+    grid-template-areas: 
+    'judul judul judul'
+    'card1 card1 card1'
+    'card2 card2 card2'
+    'card3 card3 card3';
+    gap: 30px;
+    justify-items: center;
+    align-items: center;
+}
+section .main1 div {
+    width: 80%;
+    height: 400px;
+    background-color: #4D4D4D;
+    border-radius: 25px;
+}
+section .main1 .card1 {
+    grid-area: card1;
+}
+section .main1 .card2 {
+    grid-area: card2;
+}
+section .main1 .card3 {
+    grid-area: card3;
+}
 /* akhir konten */
+/* akhir section */
 
 
 /* breakpoint */
@@ -163,7 +206,7 @@ header .container div {
 
 
 /* desktop */
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 900px) {
     /* nav */
     .menu-toggle {
         display: none;
@@ -192,7 +235,7 @@ header .container div {
     header .container {
         width: 85%;
     }
-    .container .header__h1 h1 {
+    h1 {
         color: white;
         font-size: 50px;
     }
@@ -201,6 +244,19 @@ header .container div {
     }
     .container .btn a {
         font-size: 15px;
+    }
+    /* section */
+    section h1{
+        font-size: 50px;
+    }
+    section .main1 {
+        grid-template-areas: 
+    'judul judul judul'
+    'card1 card2 card3';
+    gap: 10px;
+    }
+    section .main1 div{
+        width: 300px;
     }
 }
 
